@@ -1,5 +1,6 @@
 Version 0.9.48   unreleased
 
+    * Add SantaExchangeStyles.NO_WRAP_STYLE and associated CSS in SantaExchange.css.
     * Add new unit test class RpcInterfaceTest to check that RPCs implement the proper interface.
 
 Version 0.9.47   18 Mar 2015
